# Homework2

./: .travis.yml  CMakeLists.txt  TestsConfig.h.in  ip_filter.cpp  lib.cpp  lib.h  test.cpp  version.cpp
TestData/: filterAnyByte.txt  filterFirstByte.txt  filterFirstSecondBytes.txt  ips.txt  sorted_ips.txt
